k3s/step2k3s-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-step2k3s-clusterip
spec:
  type: ClusterIP
  selector:
    app: step2k3s
  ports:
  - port: 8080
    targetPort: 8080
