k3s/step2k3s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: step2k3s-ingress
  namespace: step2k3s
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.step2k3s.byerer.online 
    http:
      paths:
      - path: /ping
        pathType: Prefix
        backend:
          service:
            name: service-step2k3s-clusterip
            port:
              number: 8080
